deploy: 3714cd7dad1281e6265737fa55335834c0a88574

--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -128,19 +128,19 @@ ul {
             </tr>
             <tr>
                 <td>12</td>
-                <td>12</td>
+                <td>8</td>
                 <td>45</td>
                 <td>482</td>
                 <td>21</td>
-                <td>373</td>
+                <td>377</td>
             </tr>
             <tr>
                 <td>2%</td>
-                <td>2%</td>
+                <td>1%</td>
                 <td>6%</td>
-                <td>67%</td>
+                <td>68%</td>
                 <td>3%</td>
-                <td>52%</td>
+                <td>53%</td>
             </tr>
             </table>
             
@@ -187,14 +187,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
-<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02C7 CARON: try adding one of: canadian-aboriginal, yi, tifinagh</li>
+<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, math, cherokee</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, cherokee, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: old-permic, syriac, malayalam, canadian-aboriginal, tifinagh, tai-le, math, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, tifinagh, math, syriac, tai-le, coptic, old-permic, malayalam</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
@@ -226,7 +226,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: lao, zanabazar-square, mahajani, syloti-nagri, tai-le, gunjala-gondi, kaithi, takri, tagbanwa, manichaean, mende-kikakui, khudawadi, miao, myanmar, kayah-li, siddham, bassa-vah, bhaiksuki, kharoshthi, rejang, tamil, masaram-gondi, limbu, batak, duployan, chakma, pahawh-hmong, symbols, tagalog, old-permic, hebrew, cham, javanese, thai, bengali, math, coptic, modi, adlam, tifinagh, hanifi-rohingya, lepcha, hanunoo, wancho, yi, khmer, tirhuta, buginese, newa, kannada, gurmukhi, telugu, music, sundanese, meetei-mayek, buhid, nko, syriac, devanagari, sinhala, psalter-pahlavi, osage, gujarati, brahmi, balinese, tai-viet, soyombo, elbasan, mongolian, khojki, new-tai-lue, oriya, ahom, thaana, grantha, caucasian-albanian, tibetan, phags-pa, sharada, dogra, sogdian, mandaic, malayalam, marchen</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, bassa-vah, kannada, newa, tagbanwa, siddham, phags-pa, syloti-nagri, mende-kikakui, tamil, buhid, syriac, tagalog, caucasian-albanian, lepcha, symbols, oriya, takri, rejang, khmer, devanagari, grantha, tifinagh, hanifi-rohingya, bengali, hanunoo, thaana, mahajani, math, music, thai, sogdian, sharada, osage, modi, gurmukhi, khudawadi, tai-le, mandaic, kaithi, balinese, limbu, chakma, telugu, cham, kharoshthi, nko, gujarati, malayalam, sinhala, tai-viet, dogra, soyombo, bhaiksuki, duployan, mongolian, buginese, brahmi, zanabazar-square, psalter-pahlavi, khojki, tibetan, masaram-gondi, meetei-mayek, ahom, sundanese, gunjala-gondi, myanmar, old-permic, marchen, javanese, wancho, yi, tirhuta, hebrew, lao, new-tai-lue, manichaean, batak, adlam, kayah-li, coptic, miao, elbasan</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -236,14 +236,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
-<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02C7 CARON: try adding one of: canadian-aboriginal, yi, tifinagh</li>
+<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, math, cherokee</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, cherokee, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: old-permic, syriac, malayalam, canadian-aboriginal, tifinagh, tai-le, math, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, tifinagh, math, syriac, tai-le, coptic, old-permic, malayalam</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
@@ -275,7 +275,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: lao, zanabazar-square, mahajani, syloti-nagri, tai-le, gunjala-gondi, kaithi, takri, tagbanwa, manichaean, mende-kikakui, khudawadi, miao, myanmar, kayah-li, siddham, bassa-vah, bhaiksuki, kharoshthi, rejang, tamil, masaram-gondi, limbu, batak, duployan, chakma, pahawh-hmong, symbols, tagalog, old-permic, hebrew, cham, javanese, thai, bengali, math, coptic, modi, adlam, tifinagh, hanifi-rohingya, lepcha, hanunoo, wancho, yi, khmer, tirhuta, buginese, newa, kannada, gurmukhi, telugu, music, sundanese, meetei-mayek, buhid, nko, syriac, devanagari, sinhala, psalter-pahlavi, osage, gujarati, brahmi, balinese, tai-viet, soyombo, elbasan, mongolian, khojki, new-tai-lue, oriya, ahom, thaana, grantha, caucasian-albanian, tibetan, phags-pa, sharada, dogra, sogdian, mandaic, malayalam, marchen</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, bassa-vah, kannada, newa, tagbanwa, siddham, phags-pa, syloti-nagri, mende-kikakui, tamil, buhid, syriac, tagalog, caucasian-albanian, lepcha, symbols, oriya, takri, rejang, khmer, devanagari, grantha, tifinagh, hanifi-rohingya, bengali, hanunoo, thaana, mahajani, math, music, thai, sogdian, sharada, osage, modi, gurmukhi, khudawadi, tai-le, mandaic, kaithi, balinese, limbu, chakma, telugu, cham, kharoshthi, nko, gujarati, malayalam, sinhala, tai-viet, dogra, soyombo, bhaiksuki, duployan, mongolian, buginese, brahmi, zanabazar-square, psalter-pahlavi, khojki, tibetan, masaram-gondi, meetei-mayek, ahom, sundanese, gunjala-gondi, myanmar, old-permic, marchen, javanese, wancho, yi, tirhuta, hebrew, lao, new-tai-lue, manichaean, batak, adlam, kayah-li, coptic, miao, elbasan</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -285,14 +285,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
-<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02C7 CARON: try adding one of: canadian-aboriginal, yi, tifinagh</li>
+<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, math, cherokee</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, cherokee, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: old-permic, syriac, malayalam, canadian-aboriginal, tifinagh, tai-le, math, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, tifinagh, math, syriac, tai-le, coptic, old-permic, malayalam</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
@@ -324,7 +324,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: lao, zanabazar-square, mahajani, syloti-nagri, tai-le, gunjala-gondi, kaithi, takri, tagbanwa, manichaean, mende-kikakui, khudawadi, miao, myanmar, kayah-li, siddham, bassa-vah, bhaiksuki, kharoshthi, rejang, tamil, masaram-gondi, limbu, batak, duployan, chakma, pahawh-hmong, symbols, tagalog, old-permic, hebrew, cham, javanese, thai, bengali, math, coptic, modi, adlam, tifinagh, hanifi-rohingya, lepcha, hanunoo, wancho, yi, khmer, tirhuta, buginese, newa, kannada, gurmukhi, telugu, music, sundanese, meetei-mayek, buhid, nko, syriac, devanagari, sinhala, psalter-pahlavi, osage, gujarati, brahmi, balinese, tai-viet, soyombo, elbasan, mongolian, khojki, new-tai-lue, oriya, ahom, thaana, grantha, caucasian-albanian, tibetan, phags-pa, sharada, dogra, sogdian, mandaic, malayalam, marchen</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, bassa-vah, kannada, newa, tagbanwa, siddham, phags-pa, syloti-nagri, mende-kikakui, tamil, buhid, syriac, tagalog, caucasian-albanian, lepcha, symbols, oriya, takri, rejang, khmer, devanagari, grantha, tifinagh, hanifi-rohingya, bengali, hanunoo, thaana, mahajani, math, music, thai, sogdian, sharada, osage, modi, gurmukhi, khudawadi, tai-le, mandaic, kaithi, balinese, limbu, chakma, telugu, cham, kharoshthi, nko, gujarati, malayalam, sinhala, tai-viet, dogra, soyombo, bhaiksuki, duployan, mongolian, buginese, brahmi, zanabazar-square, psalter-pahlavi, khojki, tibetan, masaram-gondi, meetei-mayek, ahom, sundanese, gunjala-gondi, myanmar, old-permic, marchen, javanese, wancho, yi, tirhuta, hebrew, lao, new-tai-lue, manichaean, batak, adlam, kayah-li, coptic, miao, elbasan</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -334,14 +334,14 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: tifinagh, yi, canadian-aboriginal</li>
-<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
-<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02C7 CARON: try adding one of: canadian-aboriginal, yi, tifinagh</li>
+<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, math, cherokee</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: coptic, tifinagh, cherokee, math</li>
 <li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: old-permic, syriac, malayalam, canadian-aboriginal, tifinagh, tai-le, math, coptic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: canadian-aboriginal, tifinagh, math, syriac, tai-le, coptic, old-permic, malayalam</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
 <li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
@@ -373,7 +373,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: lao, zanabazar-square, mahajani, syloti-nagri, tai-le, gunjala-gondi, kaithi, takri, tagbanwa, manichaean, mende-kikakui, khudawadi, miao, myanmar, kayah-li, siddham, bassa-vah, bhaiksuki, kharoshthi, rejang, tamil, masaram-gondi, limbu, batak, duployan, chakma, pahawh-hmong, symbols, tagalog, old-permic, hebrew, cham, javanese, thai, bengali, math, coptic, modi, adlam, tifinagh, hanifi-rohingya, lepcha, hanunoo, wancho, yi, khmer, tirhuta, buginese, newa, kannada, gurmukhi, telugu, music, sundanese, meetei-mayek, buhid, nko, syriac, devanagari, sinhala, psalter-pahlavi, osage, gujarati, brahmi, balinese, tai-viet, soyombo, elbasan, mongolian, khojki, new-tai-lue, oriya, ahom, thaana, grantha, caucasian-albanian, tibetan, phags-pa, sharada, dogra, sogdian, mandaic, malayalam, marchen</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, bassa-vah, kannada, newa, tagbanwa, siddham, phags-pa, syloti-nagri, mende-kikakui, tamil, buhid, syriac, tagalog, caucasian-albanian, lepcha, symbols, oriya, takri, rejang, khmer, devanagari, grantha, tifinagh, hanifi-rohingya, bengali, hanunoo, thaana, mahajani, math, music, thai, sogdian, sharada, osage, modi, gurmukhi, khudawadi, tai-le, mandaic, kaithi, balinese, limbu, chakma, telugu, cham, kharoshthi, nko, gujarati, malayalam, sinhala, tai-viet, dogra, soyombo, bhaiksuki, duployan, mongolian, buginese, brahmi, zanabazar-square, psalter-pahlavi, khojki, tibetan, masaram-gondi, meetei-mayek, ahom, sundanese, gunjala-gondi, myanmar, old-permic, marchen, javanese, wancho, yi, tirhuta, hebrew, lao, new-tai-lue, manichaean, batak, adlam, kayah-li, coptic, miao, elbasan</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -680,7 +680,7 @@ less</p>
 <p>Width = 879:
 greater</p>
 <p>Width = 964:
-multiply, plusminus
+plusminus, multiply
 [code: width-outliers]</p>
 </span></li></ul></div></details>
 <details><summary>⚠️ TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1034 among a set of 4 math glyphs.
@@ -728,23 +728,6 @@ multiply</p>
 <p>Width = 1058:
 approxequal
 [code: width-outliers]</p>
-</span></li></ul></div></details>
-<h2>Section: fontbakery.profiles.glyf</h2>
-<span class='section__emoji'>🔥🔥🔥🔥</span>
-<h3>Check glyphs do not have duplicate components which have the same x,y coordinates.</h3>
-<div class='check__idlabel'>Check ID: &lt;FontBakeryCheck:com.google.fonts/check/glyf_non_transformed_duplicate_components&gt;</div>
-
-<details><summary>🔥 TASSchoolHand-Regular.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs have duplicate components which have the same x,y coordinates:
-* {'glyph': 'quotedblbase', 'component': 'comma', 'x': 0, 'y': 0} [code: found-duplicates]</p>
-</span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs have duplicate components which have the same x,y coordinates:
-* {'glyph': 'quotedblbase', 'component': 'comma', 'x': 0, 'y': 0} [code: found-duplicates]</p>
-</span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs have duplicate components which have the same x,y coordinates:
-* {'glyph': 'quotedblbase', 'component': 'comma', 'x': 0, 'y': 0} [code: found-duplicates]</p>
-</span></li></ul></div></details>
-<details><summary>🔥 TASSchoolHand-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>🔥 FAIL</span><span class='details_text'><p>The following glyphs have duplicate components which have the same x,y coordinates:
-* {'glyph': 'quotedblbase', 'component': 'comma', 'x': 0, 'y': 0} [code: found-duplicates]</p>
 </span></li></ul></div></details>
 <h2>Section: Outline Correctness Checks</h2>
 <span class='section__emoji'>⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️⚠️</span>
