--- a/fontbakery/fontbakery-report.html
+++ b/fontbakery/fontbakery-report.html
@@ -187,16 +187,16 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: canadian-aboriginal, tifinagh, yi</li>
-<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02C7 CARON: try adding one of: yi, tifinagh, canadian-aboriginal</li>
+<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, math, tifinagh</li>
-<li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, coptic, tifinagh, math, old-permic, syriac, canadian-aboriginal, malayalam</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, coptic, cherokee, math</li>
+<li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, coptic, malayalam, math, syriac, old-permic, canadian-aboriginal</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
-<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
+<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
 <li>U+0312 COMBINING TURNED COMMA ABOVE: not included in any glyphset definition</li>
 <li>U+0326 COMBINING COMMA BELOW: not included in any glyphset definition</li>
@@ -226,7 +226,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: new-tai-lue, phags-pa, limbu, thaana, zanabazar-square, rejang, cham, lepcha, bengali, javanese, telugu, buhid, kharoshthi, gujarati, elbasan, myanmar, khmer, adlam, takri, khojki, tai-le, wancho, meetei-mayek, tamil, malayalam, marchen, manichaean, sundanese, tibetan, batak, mandaic, chakma, grantha, mongolian, nko, modi, symbols, music, kayah-li, balinese, psalter-pahlavi, yi, devanagari, pahawh-hmong, newa, buginese, siddham, oriya, soyombo, caucasian-albanian, mahajani, duployan, coptic, khudawadi, masaram-gondi, miao, hanifi-rohingya, tirhuta, old-permic, dogra, sharada, bhaiksuki, tagalog, sinhala, lao, ahom, bassa-vah, tifinagh, gurmukhi, math, syriac, kannada, osage, tagbanwa, brahmi, sogdian, tai-viet, mende-kikakui, hanunoo, gunjala-gondi, hebrew, kaithi, thai, syloti-nagri</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, math, limbu, mende-kikakui, mahajani, coptic, tifinagh, bengali, myanmar, batak, gurmukhi, balinese, sogdian, tamil, marchen, new-tai-lue, thai, bassa-vah, osage, siddham, hanunoo, modi, hebrew, caucasian-albanian, sharada, brahmi, yi, sinhala, bhaiksuki, tai-le, soyombo, meetei-mayek, lepcha, mongolian, rejang, grantha, oriya, old-permic, buginese, wancho, sundanese, newa, tai-viet, chakma, masaram-gondi, hanifi-rohingya, lao, takri, tirhuta, mandaic, ahom, tagalog, miao, thaana, duployan, kayah-li, kharoshthi, gujarati, phags-pa, devanagari, nko, javanese, khudawadi, manichaean, elbasan, adlam, music, tibetan, syloti-nagri, cham, syriac, tagbanwa, dogra, symbols, khmer, kannada, buhid, khojki, psalter-pahlavi, zanabazar-square, telugu, malayalam, gunjala-gondi, kaithi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -236,16 +236,16 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: canadian-aboriginal, tifinagh, yi</li>
-<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02C7 CARON: try adding one of: yi, tifinagh, canadian-aboriginal</li>
+<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, math, tifinagh</li>
-<li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, coptic, tifinagh, math, old-permic, syriac, canadian-aboriginal, malayalam</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, coptic, cherokee, math</li>
+<li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, coptic, malayalam, math, syriac, old-permic, canadian-aboriginal</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
-<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
+<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
 <li>U+0312 COMBINING TURNED COMMA ABOVE: not included in any glyphset definition</li>
 <li>U+0326 COMBINING COMMA BELOW: not included in any glyphset definition</li>
@@ -275,7 +275,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: new-tai-lue, phags-pa, limbu, thaana, zanabazar-square, rejang, cham, lepcha, bengali, javanese, telugu, buhid, kharoshthi, gujarati, elbasan, myanmar, khmer, adlam, takri, khojki, tai-le, wancho, meetei-mayek, tamil, malayalam, marchen, manichaean, sundanese, tibetan, batak, mandaic, chakma, grantha, mongolian, nko, modi, symbols, music, kayah-li, balinese, psalter-pahlavi, yi, devanagari, pahawh-hmong, newa, buginese, siddham, oriya, soyombo, caucasian-albanian, mahajani, duployan, coptic, khudawadi, masaram-gondi, miao, hanifi-rohingya, tirhuta, old-permic, dogra, sharada, bhaiksuki, tagalog, sinhala, lao, ahom, bassa-vah, tifinagh, gurmukhi, math, syriac, kannada, osage, tagbanwa, brahmi, sogdian, tai-viet, mende-kikakui, hanunoo, gunjala-gondi, hebrew, kaithi, thai, syloti-nagri</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, math, limbu, mende-kikakui, mahajani, coptic, tifinagh, bengali, myanmar, batak, gurmukhi, balinese, sogdian, tamil, marchen, new-tai-lue, thai, bassa-vah, osage, siddham, hanunoo, modi, hebrew, caucasian-albanian, sharada, brahmi, yi, sinhala, bhaiksuki, tai-le, soyombo, meetei-mayek, lepcha, mongolian, rejang, grantha, oriya, old-permic, buginese, wancho, sundanese, newa, tai-viet, chakma, masaram-gondi, hanifi-rohingya, lao, takri, tirhuta, mandaic, ahom, tagalog, miao, thaana, duployan, kayah-li, kharoshthi, gujarati, phags-pa, devanagari, nko, javanese, khudawadi, manichaean, elbasan, adlam, music, tibetan, syloti-nagri, cham, syriac, tagbanwa, dogra, symbols, khmer, kannada, buhid, khojki, psalter-pahlavi, zanabazar-square, telugu, malayalam, gunjala-gondi, kaithi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -285,16 +285,16 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: canadian-aboriginal, tifinagh, yi</li>
-<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02C7 CARON: try adding one of: yi, tifinagh, canadian-aboriginal</li>
+<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, math, tifinagh</li>
-<li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, coptic, tifinagh, math, old-permic, syriac, canadian-aboriginal, malayalam</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, coptic, cherokee, math</li>
+<li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, coptic, malayalam, math, syriac, old-permic, canadian-aboriginal</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
-<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
+<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
 <li>U+0312 COMBINING TURNED COMMA ABOVE: not included in any glyphset definition</li>
 <li>U+0326 COMBINING COMMA BELOW: not included in any glyphset definition</li>
@@ -324,7 +324,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: new-tai-lue, phags-pa, limbu, thaana, zanabazar-square, rejang, cham, lepcha, bengali, javanese, telugu, buhid, kharoshthi, gujarati, elbasan, myanmar, khmer, adlam, takri, khojki, tai-le, wancho, meetei-mayek, tamil, malayalam, marchen, manichaean, sundanese, tibetan, batak, mandaic, chakma, grantha, mongolian, nko, modi, symbols, music, kayah-li, balinese, psalter-pahlavi, yi, devanagari, pahawh-hmong, newa, buginese, siddham, oriya, soyombo, caucasian-albanian, mahajani, duployan, coptic, khudawadi, masaram-gondi, miao, hanifi-rohingya, tirhuta, old-permic, dogra, sharada, bhaiksuki, tagalog, sinhala, lao, ahom, bassa-vah, tifinagh, gurmukhi, math, syriac, kannada, osage, tagbanwa, brahmi, sogdian, tai-viet, mende-kikakui, hanunoo, gunjala-gondi, hebrew, kaithi, thai, syloti-nagri</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, math, limbu, mende-kikakui, mahajani, coptic, tifinagh, bengali, myanmar, batak, gurmukhi, balinese, sogdian, tamil, marchen, new-tai-lue, thai, bassa-vah, osage, siddham, hanunoo, modi, hebrew, caucasian-albanian, sharada, brahmi, yi, sinhala, bhaiksuki, tai-le, soyombo, meetei-mayek, lepcha, mongolian, rejang, grantha, oriya, old-permic, buginese, wancho, sundanese, newa, tai-viet, chakma, masaram-gondi, hanifi-rohingya, lao, takri, tirhuta, mandaic, ahom, tagalog, miao, thaana, duployan, kayah-li, kharoshthi, gujarati, phags-pa, devanagari, nko, javanese, khudawadi, manichaean, elbasan, adlam, music, tibetan, syloti-nagri, cham, syriac, tagbanwa, dogra, symbols, khmer, kannada, buhid, khojki, psalter-pahlavi, zanabazar-square, telugu, malayalam, gunjala-gondi, kaithi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -334,16 +334,16 @@ be served. You can solve this by either manually adding additional
 subset declarations to METADATA.pb, or by editing the glyphset
 definitions.</p>
 <ul>
-<li>U+02C7 CARON: try adding one of: canadian-aboriginal, tifinagh, yi</li>
-<li>U+02D8 BREVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02D9 DOT ABOVE: try adding one of: canadian-aboriginal, yi</li>
-<li>U+02DB OGONEK: try adding one of: canadian-aboriginal, yi</li>
+<li>U+02C7 CARON: try adding one of: yi, tifinagh, canadian-aboriginal</li>
+<li>U+02D8 BREVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02D9 DOT ABOVE: try adding one of: yi, canadian-aboriginal</li>
+<li>U+02DB OGONEK: try adding one of: yi, canadian-aboriginal</li>
 <li>U+02DD DOUBLE ACUTE ACCENT: not included in any glyphset definition</li>
-<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: cherokee, coptic, math, tifinagh</li>
-<li>U+0306 COMBINING BREVE: try adding one of: old-permic, tifinagh</li>
-<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, coptic, tifinagh, math, old-permic, syriac, canadian-aboriginal, malayalam</li>
+<li>U+0302 COMBINING CIRCUMFLEX ACCENT: try adding one of: tifinagh, coptic, cherokee, math</li>
+<li>U+0306 COMBINING BREVE: try adding one of: tifinagh, old-permic</li>
+<li>U+0307 COMBINING DOT ABOVE: try adding one of: tai-le, tifinagh, coptic, malayalam, math, syriac, old-permic, canadian-aboriginal</li>
 <li>U+030A COMBINING RING ABOVE: try adding syriac</li>
-<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: cherokee, osage</li>
+<li>U+030B COMBINING DOUBLE ACUTE ACCENT: try adding one of: osage, cherokee</li>
 <li>U+030C COMBINING CARON: try adding one of: tai-le, cherokee</li>
 <li>U+0312 COMBINING TURNED COMMA ABOVE: not included in any glyphset definition</li>
 <li>U+0326 COMBINING COMMA BELOW: not included in any glyphset definition</li>
@@ -373,7 +373,7 @@ definitions.</p>
 <li>U+2264 LESS-THAN OR EQUAL TO: try adding math</li>
 <li>U+2265 GREATER-THAN OR EQUAL TO: try adding math</li>
 <li>U+25CA LOZENGE: try adding one of: symbols, math</li>
-<li>U+25CC DOTTED CIRCLE: try adding one of: new-tai-lue, phags-pa, limbu, thaana, zanabazar-square, rejang, cham, lepcha, bengali, javanese, telugu, buhid, kharoshthi, gujarati, elbasan, myanmar, khmer, adlam, takri, khojki, tai-le, wancho, meetei-mayek, tamil, malayalam, marchen, manichaean, sundanese, tibetan, batak, mandaic, chakma, grantha, mongolian, nko, modi, symbols, music, kayah-li, balinese, psalter-pahlavi, yi, devanagari, pahawh-hmong, newa, buginese, siddham, oriya, soyombo, caucasian-albanian, mahajani, duployan, coptic, khudawadi, masaram-gondi, miao, hanifi-rohingya, tirhuta, old-permic, dogra, sharada, bhaiksuki, tagalog, sinhala, lao, ahom, bassa-vah, tifinagh, gurmukhi, math, syriac, kannada, osage, tagbanwa, brahmi, sogdian, tai-viet, mende-kikakui, hanunoo, gunjala-gondi, hebrew, kaithi, thai, syloti-nagri</li>
+<li>U+25CC DOTTED CIRCLE: try adding one of: pahawh-hmong, math, limbu, mende-kikakui, mahajani, coptic, tifinagh, bengali, myanmar, batak, gurmukhi, balinese, sogdian, tamil, marchen, new-tai-lue, thai, bassa-vah, osage, siddham, hanunoo, modi, hebrew, caucasian-albanian, sharada, brahmi, yi, sinhala, bhaiksuki, tai-le, soyombo, meetei-mayek, lepcha, mongolian, rejang, grantha, oriya, old-permic, buginese, wancho, sundanese, newa, tai-viet, chakma, masaram-gondi, hanifi-rohingya, lao, takri, tirhuta, mandaic, ahom, tagalog, miao, thaana, duployan, kayah-li, kharoshthi, gujarati, phags-pa, devanagari, nko, javanese, khudawadi, manichaean, elbasan, adlam, music, tibetan, syloti-nagri, cham, syriac, tagbanwa, dogra, symbols, khmer, kannada, buhid, khojki, psalter-pahlavi, zanabazar-square, telugu, malayalam, gunjala-gondi, kaithi</li>
 </ul>
 <p>Or you can add the above codepoints to one of the subsets supported by the font: <code>latin</code>, <code>latin-ext</code> [code: unreachable-subsetting]</p>
 </span></li></ul></div></details>
@@ -669,7 +669,7 @@ definitions.</p>
 <details><summary>⚠️ TasSh-SemiBold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1085 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1084:
-minus, plus, divide</p>
+divide, plus, minus</p>
 <p>Width = 991:
 less</p>
 <p>Width = 992:
@@ -685,7 +685,7 @@ approxequal
 <details><summary>⚠️ TasSh-Bold.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1116 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1114:
-minus, plus, divide</p>
+divide, plus, minus</p>
 <p>Width = 1018:
 less</p>
 <p>Width = 1020:
@@ -701,7 +701,7 @@ approxequal
 <details><summary>⚠️ TasSh-Medium.ttf</summary><div><ul><li class='details_item'><span class='details_indicator'>⚠️ WARN</span><span class='details_text'><p>The most common width is 1034 among a set of 4 math glyphs.
 The following math glyphs have a different width, though:</p>
 <p>Width = 1033:
-minus, plus, divide</p>
+divide, plus, minus</p>
 <p>Width = 945:
 less, greater</p>
 <p>Width = 1051:
